# consolet

./: Cargo.toml  README.md
src/: commands.rs  config.rs  controller.rs  file_browser.rs  help_sheet.rs  keybindings.rs  main.rs  palette.rs  script_handler.rs  utils.rs
