[package]
name = "consolet"
version = "0.1.0"
edition = "2021"



[dependencies]
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream", "serde"]}
image = "0.25.1"
chrono = "0.4.38"
unicode-segmentation = "1.10.0"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
open = "5.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"
rand = "0.8"
lab = "0.11"
flate2 = "1.0"


